--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* @import-normalize; bring in normalize.css styles */
 
 body {
-  /* margin: 0; */
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -42,6 +42,3 @@ img {
   margin: 0;
   padding: 0;
 }
-
-
-
